// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with NaN color 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-gtsqUy LGKbY ljfzPg"
    color="primary"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 2`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-dlniIP LGKbY eOYAcp"
    color="primary"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 3`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-gtsqUy iAcBjI bBtnHW"
    color="danger"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 4`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-dlniIP iAcBjI bPHzbf"
    color="danger"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 5`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-gtsqUy QdWXY bGRdil"
    color="default"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 6`] = `
<DocumentFragment>
  <button
    class="sc-bdnyFh sc-dlniIP QdWXY biLtug"
    color="default"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;
